--- a/indext.html
+++ b/indext.html
@@ -24,7 +24,7 @@
     .navbar ul li a { color:#fff; text-decoration: none; font-weight: bold; }
     .navbar .icon { flex: 1; text-align: right; }
 
-    /* Project description / marquee */
+    /* Marquee / Moving Text */
     .marquee-container {
       width: 100%;
       overflow: hidden;
@@ -64,19 +64,13 @@
     button#startBtn { padding: 10px 20px; font-size: 18px; cursor: pointer; }
     #webcam-container, #label-container { margin: 15px auto; }
 
-    /* Static images section */
-    .static-images { display: flex; justify-content: center; flex-wrap: wrap; gap: 15px; margin-bottom:30px; }
-    .static-images img { width: 300px; height: 200px; object-fit: cover; border-radius: 10px; }
-
     /* Responsive */
     @media(max-width:768px){
       .navbar ul { flex: 1; justify-content: space-around; margin:10px 0; }
       section.hero h1 { font-size: 24px; }
       section.hero p { font-size: 16px; }
-      .slide-text { font-size: 18px; }
       button#startBtn { font-size: 16px; }
       .marquee-container { font-size: 18px; }
-      .static-images img { width: 90%; height: auto; }
     }
   </style>
 </head>
@@ -126,13 +120,6 @@
     <button id="startBtn">Start Camera & Detect Age</button>
   </section>
 
-  <!-- Static Images Section -->
-  <section class="static-images">
-    <img src="https://picsum.photos/id/1045/400/300" alt="Static 1">
-    <img src="https://picsum.photos/id/1049/400/300" alt="Static 2">
-    <img src="https://picsum.photos/id/1052/400/300" alt="Static 3">
-  </section>
-
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.21.0/dist/tf.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8.4/dist/teachablemachine-image.min.js"></script>
@@ -171,10 +158,25 @@
       });
 
       const best = prediction.reduce((a,b)=>a.probability>b.probability?a:b);
-      if(best.probability>0.8){
-        if(best.className.toLowerCase()==="kids") window.location.href="kids.html";
-        if(best.className.toLowerCase()==="adult") window.location.href="adult.html";
-        if(best.className.toLowerCase()==="senior") window.location.href="senior.html";
+      if(best.probability > 0.8){
+        // عرض رسالة قبل التحويل
+        let message = "";
+        let page = "";
+        if(best.className.toLowerCase() === "kids") { 
+          message = "تم تحديد أنك طفل. سيتم تحويلك إلى صفحة الأطفال.";
+          page = "kids.html";
+        }
+        if(best.className.toLowerCase() === "adult") { 
+          message = "تم تحديد أنك بالغ. سيتم تحويلك إلى صفحة البالغين.";
+          page = "adult.html";
+        }
+        if(best.className.toLowerCase() === "senior") { 
+          message = "تم تحديد أنك كبير السن. سيتم تحويلك إلى صفحة الكبار.";
+          page = "senior.html";
+        }
+
+        alert(message);
+        window.location.href = page;
       }
     }
 
