--- a/indext.html
+++ b/indext.html
@@ -24,7 +24,7 @@
     .navbar ul li a { color:#fff; text-decoration: none; font-weight: bold; }
     .navbar .icon { flex: 1; text-align: right; }
 
-    /* Marquee / Moving Text */
+    /* Marquee */
     .marquee-container {
       width: 100%;
       overflow: hidden;
@@ -45,16 +45,66 @@
     }
 
     /* Banner Slider */
-    .banner-slider { position: relative; overflow: hidden; max-width: 100%; height: 400px; margin-bottom:20px; background:#000; }
-    .slide { position: absolute; width: 100%; height: 100%; opacity: 0; transition: opacity 1s ease-in-out; }
-    .slide.active { opacity: 1; z-index: 2; }
-    .slide img { width: 100%; height: 100%; object-fit: cover; }
-    .prev, .next { position: absolute; top: 50%; transform: translateY(-50%); background-color: rgba(0,0,0,0.5); color: #fff; border: none; padding: 10px; cursor: pointer; font-size: 24px; z-index: 3; }
+    .banner-slider { 
+      position: relative; 
+      overflow: hidden; 
+      max-width: 100%; 
+      height: 600px; 
+      margin-bottom:20px; 
+      background:#000; 
+    }
+    .slide { 
+      position: absolute; 
+      width: 100%; 
+      height: 100%; 
+      opacity: 0; 
+      transition: opacity 1.5s ease-in-out; /* smoother fade */
+    }
+    .slide.active { 
+      opacity: 1; 
+      z-index: 2; 
+    }
+    .slide img { 
+      width: 100%; 
+      height: 100%; 
+      object-fit: cover; 
+    }
+    .prev, .next { 
+      position: absolute; 
+      top: 50%; 
+      transform: translateY(-50%); 
+      background-color: rgba(0,0,0,0.5); 
+      color: #fff; 
+      border: none; 
+      padding: 10px; 
+      cursor: pointer; 
+      font-size: 24px; 
+      z-index: 3; 
+      transition: background 0.3s;
+    }
+    .prev:hover, .next:hover {
+      background-color: rgba(255,255,255,0.3);
+    }
     .prev { left: 10px; }
     .next { right: 10px; }
 
-    .dots { position: absolute; bottom: 10px; left: 50%; transform: translateX(-50%); display: flex; gap: 8px; z-index: 3; }
-    .dot { width: 12px; height: 12px; border-radius: 50%; background-color: rgba(255,255,255,0.5); cursor: pointer; }
+    .dots { 
+      position: absolute; 
+      bottom: 15px; 
+      left: 50%; 
+      transform: translateX(-50%); 
+      display: flex; 
+      gap: 10px; 
+      z-index: 3; 
+    }
+    .dot { 
+      width: 14px; 
+      height: 14px; 
+      border-radius: 50%; 
+      background-color: rgba(255,255,255,0.5); 
+      cursor: pointer; 
+      transition: background 0.3s;
+    }
     .dot.active { background-color: #fff; }
 
     /* Hero / Webcam */
@@ -71,6 +121,7 @@
       section.hero p { font-size: 16px; }
       button#startBtn { font-size: 16px; }
       .marquee-container { font-size: 18px; }
+      .banner-slider { height: 400px; }
     }
   </style>
 </head>
@@ -87,7 +138,7 @@
     <div class="icon">🎬</div>
   </nav>
 
-  <!-- Marquee / Moving Text -->
+  <!-- Marquee -->
   <div class="marquee-container">
     <div class="marquee" id="marqueeText"></div>
   </div>
@@ -95,13 +146,13 @@
   <!-- Banner Slider -->
   <section class="banner-slider" id="bannerSlider">
     <div class="slide active">
-      <img src="1.jpeg" alt="Banner 1">
+      <img src="https://picsum.photos/id/1018/1200/600" alt="Banner 1">
     </div>
     <div class="slide">
-      <img src="2.JPEG" alt="Banner 2">
+      <img src="https://picsum.photos/id/1025/1200/600" alt="Banner 2">
     </div>
     <div class="slide">
-      <img src="3.png" alt="Banner 3">
+      <img src="https://picsum.photos/id/1039/1200/600" alt="Banner 3">
     </div>
 
     <button class="prev">&#10094;</button>
@@ -109,7 +160,7 @@
     <div class="dots"></div>
   </section>
 
-  <!-- Hero / Age Detection -->
+  <!-- Hero -->
   <section class="hero">
     <h1>Welcome to Ageflix</h1>
     <p>Discover movies according to your age group!</p>
@@ -125,7 +176,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8.4/dist/teachablemachine-image.min.js"></script>
 
   <script>
-    // Age Detection
+    // ----------- AGE DETECTION -----------
     const URL = "https://teachablemachine.withgoogle.com/models/UujRQ_OS4/";
     let model, webcam, maxPredictions;
 
@@ -158,25 +209,13 @@
       });
 
       const best = prediction.reduce((a,b)=>a.probability>b.probability?a:b);
-      if(best.probability > 0.8){
+      if(best.probability>0.8){
         let message = "";
         let page = "";
-        const cls = best.className.toLowerCase();
+        if(best.className.toLowerCase()==="kids") { message="You are a Kid! Redirecting..."; page="kids.html"; }
+        else if(best.className.toLowerCase()==="adult") { message="You are an Adult! Redirecting..."; page="adult.html"; }
+        else if(best.className.toLowerCase()==="senior") { message="You are a Senior! Redirecting..."; page="senior.html"; }
 
-        if(cls === "kids") { 
-          message = "You are identified as a kid. Redirecting to the kids page...";
-          page = "kids.html";
-        }
-        if(cls === "adult") { 
-          message = "You are identified as an adult. Redirecting to the adult page...";
-          page = "adult.html";
-        }
-        if(cls === "senior") { 
-          message = "You are identified as a senior. Redirecting to the senior page...";
-          page = "senior.html";
-        }
-
-        // Show alert once, then redirect
         alert(message);
         window.location.href = page;
       }
@@ -184,12 +223,13 @@
 
     document.getElementById("startBtn").addEventListener("click", init);
 
-    // Banner Slider
+    // ----------- SLIDER -----------
     const slides = document.querySelectorAll('.slide');
     const prev = document.querySelector('.prev');
     const next = document.querySelector('.next');
     const dotsContainer = document.querySelector('.dots');
     let slideIndex = 0;
+    let autoSlideInterval;
 
     function showSlide(index){
       if(index < 0) slideIndex = slides.length-1;
@@ -204,18 +244,32 @@
       if(dotsContainer.children[slideIndex]) dotsContainer.children[slideIndex].classList.add('active');
     }
 
-    prev.addEventListener('click', ()=> showSlide(slideIndex-1));
-    next.addEventListener('click', ()=> showSlide(slideIndex+1));
+    prev.addEventListener('click', ()=> { showSlide(slideIndex-1); resetAutoSlide(); });
+    next.addEventListener('click', ()=> { showSlide(slideIndex+1); resetAutoSlide(); });
 
     slides.forEach((_,i)=>{
       const dot = document.createElement('span');
       dot.classList.add('dot');
       if(i===0) dot.classList.add('active');
-      dot.addEventListener('click', ()=>showSlide(i));
+      dot.addEventListener('click', ()=>{ showSlide(i); resetAutoSlide(); });
       dotsContainer.appendChild(dot);
     });
 
-    // Marquee / Moving Text
+    // Auto-slide every 5 seconds
+    function startAutoSlide() {
+      autoSlideInterval = setInterval(() => {
+        showSlide(slideIndex + 1);
+      }, 5000);
+    }
+
+    function resetAutoSlide() {
+      clearInterval(autoSlideInterval);
+      startAutoSlide();
+    }
+
+    startAutoSlide();
+
+    // ----------- MARQUEE TEXT -----------
     const marqueeTextElem = document.getElementById('marqueeText');
     const marqueeMessages = [
       "Ageflix recommends movies based on your age",
@@ -237,5 +291,3 @@
 
 </body>
 </html>
-
-
