--- a/indext.html
+++ b/indext.html
@@ -24,7 +24,7 @@
     .navbar ul li a { color:#fff; text-decoration: none; font-weight: bold; }
     .navbar .icon { flex: 1; text-align: right; }
 
-    /* Marquee */
+    /* Project description / marquee */
     .marquee-container {
       width: 100%;
       overflow: hidden;
@@ -45,66 +45,16 @@
     }
 
     /* Banner Slider */
-    .banner-slider { 
-      position: relative; 
-      overflow: hidden; 
-      max-width: 100%; 
-      height: 600px; 
-      margin-bottom:20px; 
-      background:#000; 
-    }
-    .slide { 
-      position: absolute; 
-      width: 100%; 
-      height: 100%; 
-      opacity: 0; 
-      transition: opacity 1.5s ease-in-out; /* smoother fade */
-    }
-    .slide.active { 
-      opacity: 1; 
-      z-index: 2; 
-    }
-    .slide img { 
-      width: 100%; 
-      height: 100%; 
-      object-fit: cover; 
-    }
-    .prev, .next { 
-      position: absolute; 
-      top: 50%; 
-      transform: translateY(-50%); 
-      background-color: rgba(0,0,0,0.5); 
-      color: #fff; 
-      border: none; 
-      padding: 10px; 
-      cursor: pointer; 
-      font-size: 24px; 
-      z-index: 3; 
-      transition: background 0.3s;
-    }
-    .prev:hover, .next:hover {
-      background-color: rgba(255,255,255,0.3);
-    }
+    .banner-slider { position: relative; overflow: hidden; max-width: 100%; height: 400px; margin-bottom:20px; background:#000; }
+    .slide { position: absolute; width: 100%; height: 100%; opacity: 0; transition: opacity 1s ease-in-out; }
+    .slide.active { opacity: 1; z-index: 2; }
+    .slide img { width: 100%; height: 100%; object-fit: cover; }
+    .prev, .next { position: absolute; top: 50%; transform: translateY(-50%); background-color: rgba(0,0,0,0.5); color: #fff; border: none; padding: 10px; cursor: pointer; font-size: 24px; z-index: 3; }
     .prev { left: 10px; }
     .next { right: 10px; }
 
-    .dots { 
-      position: absolute; 
-      bottom: 15px; 
-      left: 50%; 
-      transform: translateX(-50%); 
-      display: flex; 
-      gap: 10px; 
-      z-index: 3; 
-    }
-    .dot { 
-      width: 14px; 
-      height: 14px; 
-      border-radius: 50%; 
-      background-color: rgba(255,255,255,0.5); 
-      cursor: pointer; 
-      transition: background 0.3s;
-    }
+    .dots { position: absolute; bottom: 10px; left: 50%; transform: translateX(-50%); display: flex; gap: 8px; z-index: 3; }
+    .dot { width: 12px; height: 12px; border-radius: 50%; background-color: rgba(255,255,255,0.5); cursor: pointer; }
     .dot.active { background-color: #fff; }
 
     /* Hero / Webcam */
@@ -114,14 +64,19 @@
     button#startBtn { padding: 10px 20px; font-size: 18px; cursor: pointer; }
     #webcam-container, #label-container { margin: 15px auto; }
 
+    /* Static images section */
+    .static-images { display: flex; justify-content: center; flex-wrap: wrap; gap: 15px; margin-bottom:30px; }
+    .static-images img { width: 300px; height: 200px; object-fit: cover; border-radius: 10px; }
+
     /* Responsive */
     @media(max-width:768px){
       .navbar ul { flex: 1; justify-content: space-around; margin:10px 0; }
       section.hero h1 { font-size: 24px; }
       section.hero p { font-size: 16px; }
+      .slide-text { font-size: 18px; }
       button#startBtn { font-size: 16px; }
       .marquee-container { font-size: 18px; }
-      .banner-slider { height: 400px; }
+      .static-images img { width: 90%; height: auto; }
     }
   </style>
 </head>
@@ -138,7 +93,7 @@
     <div class="icon">🎬</div>
   </nav>
 
-  <!-- Marquee -->
+  <!-- Marquee / Moving Text -->
   <div class="marquee-container">
     <div class="marquee" id="marqueeText"></div>
   </div>
@@ -146,13 +101,13 @@
   <!-- Banner Slider -->
   <section class="banner-slider" id="bannerSlider">
     <div class="slide active">
-      <img src="https://picsum.photos/id/1018/1200/600" alt="Banner 1">
+      <img src="https://picsum.photos/id/1018/1200/400" alt="Banner 1">
     </div>
     <div class="slide">
-      <img src="https://picsum.photos/id/1025/1200/600" alt="Banner 2">
+      <img src="https://picsum.photos/id/1025/1200/400" alt="Banner 2">
     </div>
     <div class="slide">
-      <img src="https://picsum.photos/id/1039/1200/600" alt="Banner 3">
+      <img src="https://picsum.photos/id/1039/1200/400" alt="Banner 3">
     </div>
 
     <button class="prev">&#10094;</button>
@@ -160,7 +115,7 @@
     <div class="dots"></div>
   </section>
 
-  <!-- Hero -->
+  <!-- Hero / Age Detection -->
   <section class="hero">
     <h1>Welcome to Ageflix</h1>
     <p>Discover movies according to your age group!</p>
@@ -171,12 +126,19 @@
     <button id="startBtn">Start Camera & Detect Age</button>
   </section>
 
+  <!-- Static Images Section -->
+  <section class="static-images">
+    <img src="https://picsum.photos/id/1045/400/300" alt="Static 1">
+    <img src="https://picsum.photos/id/1049/400/300" alt="Static 2">
+    <img src="https://picsum.photos/id/1052/400/300" alt="Static 3">
+  </section>
+
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.21.0/dist/tf.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8.4/dist/teachablemachine-image.min.js"></script>
 
   <script>
-    // ----------- AGE DETECTION -----------
+    // Age Detection
     const URL = "https://teachablemachine.withgoogle.com/models/UujRQ_OS4/";
     let model, webcam, maxPredictions;
 
@@ -210,26 +172,20 @@
 
       const best = prediction.reduce((a,b)=>a.probability>b.probability?a:b);
       if(best.probability>0.8){
-        let message = "";
-        let page = "";
-        if(best.className.toLowerCase()==="kids") { message="You are a Kid! Redirecting..."; page="kids.html"; }
-        else if(best.className.toLowerCase()==="adult") { message="You are an Adult! Redirecting..."; page="adult.html"; }
-        else if(best.className.toLowerCase()==="senior") { message="You are a Senior! Redirecting..."; page="senior.html"; }
-
-        alert(message);
-        window.location.href = page;
+        if(best.className.toLowerCase()==="kids") window.location.href="kids.html";
+        if(best.className.toLowerCase()==="adult") window.location.href="adult.html";
+        if(best.className.toLowerCase()==="senior") window.location.href="senior.html";
       }
     }
 
     document.getElementById("startBtn").addEventListener("click", init);
 
-    // ----------- SLIDER -----------
+    // Banner Slider JS
     const slides = document.querySelectorAll('.slide');
     const prev = document.querySelector('.prev');
     const next = document.querySelector('.next');
     const dotsContainer = document.querySelector('.dots');
     let slideIndex = 0;
-    let autoSlideInterval;
 
     function showSlide(index){
       if(index < 0) slideIndex = slides.length-1;
@@ -244,32 +200,19 @@
       if(dotsContainer.children[slideIndex]) dotsContainer.children[slideIndex].classList.add('active');
     }
 
-    prev.addEventListener('click', ()=> { showSlide(slideIndex-1); resetAutoSlide(); });
-    next.addEventListener('click', ()=> { showSlide(slideIndex+1); resetAutoSlide(); });
+    prev.addEventListener('click', ()=> showSlide(slideIndex-1));
+    next.addEventListener('click', ()=> showSlide(slideIndex+1));
 
+    // Dots
     slides.forEach((_,i)=>{
       const dot = document.createElement('span');
       dot.classList.add('dot');
       if(i===0) dot.classList.add('active');
-      dot.addEventListener('click', ()=>{ showSlide(i); resetAutoSlide(); });
+      dot.addEventListener('click', ()=>showSlide(i));
       dotsContainer.appendChild(dot);
     });
 
-    // Auto-slide every 5 seconds
-    function startAutoSlide() {
-      autoSlideInterval = setInterval(() => {
-        showSlide(slideIndex + 1);
-      }, 5000);
-    }
-
-    function resetAutoSlide() {
-      clearInterval(autoSlideInterval);
-      startAutoSlide();
-    }
-
-    startAutoSlide();
-
-    // ----------- MARQUEE TEXT -----------
+    // Marquee / Moving Text
     const marqueeTextElem = document.getElementById('marqueeText');
     const marqueeMessages = [
       "Ageflix recommends movies based on your age",
@@ -285,9 +228,10 @@
       marqueeIndex = (marqueeIndex+1) % marqueeMessages.length;
     }
 
-    setInterval(updateMarquee, 5000);
+    setInterval(updateMarquee, 5000); // Change text every 5 seconds
     updateMarquee();
   </script>
 
 </body>
 </html>
+
