--- a/indext.html
+++ b/indext.html
@@ -101,13 +101,13 @@
   <!-- Banner Slider -->
   <section class="banner-slider" id="bannerSlider">
     <div class="slide active">
-      <img src="https://picsum.photos/id/1018/1200/400" alt="Banner 1">
+      <img src="1.jpeg" alt="Banner 1">
     </div>
     <div class="slide">
-      <img src="https://picsum.photos/id/1025/1200/400" alt="Banner 2">
+      <img src="2.jpeg" alt="Banner 2">
     </div>
     <div class="slide">
-      <img src="https://picsum.photos/id/1039/1200/400" alt="Banner 3">
+      <img src="3.png" alt="Banner 3">
     </div>
 
     <button class="prev">&#10094;</button>
@@ -234,4 +234,5 @@
 
 </body>
 </html>
+
 
